--- a/BootstrapJqueryValidate/BootstrapJqueryValidate.csproj
+++ b/BootstrapJqueryValidate/BootstrapJqueryValidate.csproj
@@ -240,6 +240,7 @@
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Note\Index.cshtml" />
+    <Content Include="Views\Note\JSPage.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
