--- a/BootstrapJqueryValidate/Web.config
+++ b/BootstrapJqueryValidate/Web.config
@@ -10,7 +10,8 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-BootstrapJqueryValidate-20170309022014.mdf;Initial Catalog=aspnet-BootstrapJqueryValidate-20170309022014;Integrated Security=True" providerName="System.Data.SqlClient" />
-  </connectionStrings>
+    
+  <add name="DemoEntities" connectionString="metadata=res://*/Models.DemoDB.csdl|res://*/Models.DemoDB.ssdl|res://*/Models.DemoDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\v11.0;attachdbfilename=|DataDirectory|\Demo.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
